[US26] Add cached all users to query http://localhost:8080/search; Add tests for task US16 and US26